# pulso

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  BREAKING_CHANGES_v1.0.0rc2.md  CHANGELOG.md  CONTRIBUTING.md  DEPRECATIONS.md  ISSUE_DRAFT_parse_error_regression.md  LICENSE  PHASE_0_NOTES.md  PHASE_1_CODE_NOTES.md  PHASE_2_CODE_NOTES.md  PHASE_2_DATA_NOTES.md  PHASE_3_CODE_NOTES.md  README.md  RELEASE_NOTES_v1.0.0rc2.md  pyproject.toml  verify_skippable.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: harmonization_concern.md  month_fails_to_load.md
.github/workflows/: ci.yml  integration.yml  release.yml  scrape_monthly.yml
docs/: CATALOG_NOTES.md  PHASE_3_DATA_NOTES.md  architecture.es.md  architecture.md  caveats.md  contributing.md  epochs.md  harmonization.md  harmonizer-core-design.md  index.md  modules.md  quickstart.md
docs/adr/: 0004-dane-catalog-scraping.md  0005-shape-a-support.md
docs/decisions/: 0001-build-plan.md  0002-scope-2006-present.md  0003-schema-1.1-area-filtering.md  0004-harmonizer-design.md  0005-phase4-roadmap.md
docs/examples/: README.md
docs/internal/: FRAGMENTATION_INVESTIGATION.md  README.md
docs/internal/investigations/: AGENT_4_REPORT.md  AGENT_5_REPORT.md
docs/internal/investigations/dictionaries/: 00_DISCOVERY_REPORT.md  01_catalog_urls.md  02_geih_2024_anatomy.md  03_year_in_progress.md  04_year_consistency.md  05_zip_and_dict_anatomy.md
docs/internal/investigations/dictionaries/samples/: README.md
docs/internal/investigations/metadata/: 00_AGENT_2_REPORT.md  01_ddi_anatomy.md  01_ddi_anatomy_excerpts.md  02_schema_design.md  03_quality_gap_report.md  04_AGENT_3_REPORT.md
docs/internal/issue_drafts/: ISSUE_DRAFT_fragmentation.md
docs/internal/phases/: PHASE_1_DATA_NOTES.md  PHASE_2_CODE_NOTES.md  PHASE_2_DATA_NOTES.md  PHASE_3_DATA_NOTES.md
docs/internal/verifications/: verification_pre_commit13.txt
pulso/: __init__.py
pulso/_config/: __init__.py  epochs.py  registry.py  variables.py
pulso/_core/: __init__.py  downloader.py  empalme.py  expander.py  harmonizer.py  harmonizer_funcs.py  loader.py  merger.py  parser.py
pulso/_utils/: __init__.py  cache.py  columns.py  exceptions.py  logging.py  validation.py
pulso/data/: _scraped_catalog.json  empalme_sources.json  epochs.json  sources.json  variable_map.json  variable_module_map.json
pulso/data/schemas/: dane_codebook.schema.json  empalme_sources.schema.json  epochs.schema.json  sources.schema.json  variable_map.schema.json  variable_module_map.schema.json
pulso/metadata/: __init__.py  api.py  composer.py  parser.py  schema.py
scripts/: add_month.py  agent_scraper.py  build_dane_codebook.py  generate_sources_from_catalog.py  replicate_official_stat.py  scrape_dane_catalog.py  validate_sources.py  verify_checksums.py
scripts/verification/: quality_gap_analysis.py  verification_pre_commit13.py  verify_wheel_clean_venv.ps1  verify_wheel_smoke.py
tests/: README.md  _build_fixtures.py  _smoke_metadata.py  conftest.py
tests/fixtures/: README.md
tests/integration/: _helpers.py  _update_checksums.py  test_all_validated_months.py  test_harmonize_cross_epoch.py  test_harmonize_fixture.py  test_load_all_entries.py  test_load_fixture.py  test_load_merged_2015_06.py  test_metadata_e2e.py  test_real_data_smoke.py  test_smoothing.py  test_user_use_cases.py
tests/unit/: test_aggregated_skipped_warning.py  test_aggregated_warning.py  test_cache.py  test_continue_on_failure.py  test_describe_and_expand.py  test_describe_module.py  test_downloader.py  test_empalme.py  test_empalme_sources.py  test_epochs.py  test_exceptions.py  test_harmonizer.py  test_harmonizer_funcs.py  test_iterable_inputs.py  test_load_merged_modules.py  test_loader.py  test_merger.py  test_module_aware_filtering.py  test_parser.py  test_parser_nested_zip.py  test_parser_shape_a_normalization.py  test_registry.py  test_schemas.py  test_skippable_parse_error.py  test_smoke.py  test_strict_param.py  test_validation.py  test_validation_helpers.py
tests/unit/test_metadata/: test_api.py  test_composer.py  test_composer_cache.py  test_no_lxml_runtime.py  test_parser.py
