[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pulso-co"
version = "1.0.0"
description = "Python library to load GEIH microdata from Colombia's DANE"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "pulso contributors" },
]
keywords = ["dane", "geih", "colombia", "microdata", "labor-force-survey", "encuesta-hogares", "pulso"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sociology",
    "Natural Language :: Spanish",
    "Natural Language :: English",
]
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "jsonschema>=4.20",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
legacy = [
    "pyreadstat>=1.2",  # for .sav (SPSS) and .dta (Stata) support
]
scraper = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs",
    "types-requests",
    "types-jsonschema",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/Stebandido77/pulso"
Documentation = "https://github.com/Stebandido77/pulso#readme"
Repository = "https://github.com/Stebandido77/pulso"
Issues = "https://github.com/Stebandido77/pulso/issues"
Changelog = "https://github.com/Stebandido77/pulso/blob/main/CHANGELOG.md"

[project.scripts]
pulso-validate-sources = "scripts.validate_sources:main"
pulso-add-month = "scripts.add_month:main"

[tool.hatch.build.targets.wheel]
packages = ["pulso"]

[tool.hatch.build.targets.sdist]
include = [
    "pulso/",
    "tests/",
    "docs/",
    "scripts/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    ".venv*",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/*.pyc",
    ".git",
    ".github",
    ".gitignore",
    ".ruff_cache",
    ".mypy_cache",
    ".coverage",
    ".coverage.*",
    "scripts/_spike_phase35",
    "scripts/scrape_cache",
    "scripts/verification",      # ad-hoc release verification scripts (not user-facing)
    "docs/internal",             # audit reports, phase notes, issue drafts (process docs)
    "dist/",
    "build/",
]


# ─── Testing ──────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: tests that hit the network or take >1s (deselect with '-m \"not slow\"')",
    "integration: tests that require real DANE data (require --run-integration)",
    "unit: fast unit tests (default)",
    "real_data: tests requiring real DANE downloads (slow, network-dependent)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
]

[tool.coverage.run]
source = ["pulso"]
branch = true
omit = [
    "pulso/__init__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ─── Linting ──────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["docs/", "scripts/scrape_cache/"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle, pyflakes
    "I",            # isort
    "UP",           # pyupgrade
    "B",            # bugbear
    "C4",           # comprehensions
    "PIE",          # misc
    "SIM",          # simplify
    "RET",          # return
    "RUF",          # ruff-specific
    "PT",           # pytest style
    "PTH",          # use pathlib
    "TCH",          # type-checking imports
    "ARG",          # unused arguments
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (common in CLI)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Type checking ────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pyreadstat.*", "tqdm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
